--- a/CQF_Python_precourse_part1.ipynb
+++ b/CQF_Python_precourse_part1.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import matplotlib # graphics library\n",
     "import scipy # scientific python\n",
-    "import nltk # for natural language processing\n",
+    "import nltk # natural language processing\n",
     "import numpy as np # nmerical library and manupulation arrays - flagship\n",
     "import pandas as pd # panel data - series and dataframes - flagpship"
    ]
