--- a/cqf_pythonlab_20220512_mlskl.ipynb
+++ b/cqf_pythonlab_20220512_mlskl.ipynb
@@ -991,41 +991,51 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pipe' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17152/3479287943.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpipeline\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPipeline\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mpipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnamed_steps\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'pipe' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'scaler': StandardScaler(), 'regressor': LinearRegression()}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# pipelines (sequential)\n",
     "\n",
     "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# define pipeline (list of tuples)\n",
+    "pipe = Pipeline([\n",
+    "                 ('scaler', StandardScaler()),\n",
+    "                 ('regressor', LinearRegression())\n",
+    "                ])\n",
     "pipe.named_steps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1e8353a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30.00384338 25.02556238 30.56759672 28.60703649 27.94352423 25.25628446\n",
+      " 23.00180827 19.53598843 11.52363685 18.92026211]\n",
+      "R^2: 0.7406\n"
+     ]
+    }
+   ],
    "source": [
-    "# list of tuples\n",
-    "pipe = Pipeline([\n",
-    "                 ('scaler', StandardScaler()),\n",
-    "                 ('regressor', LinearRegression())\n",
-    "                ])\n",
     "# fit/train model\n",
     "pipe.fit(X, y)\n",
-    "# predict the labels\n",
-    "y_pred = pipe.predict(X)\n",
     "\n",
+    "# predict labels\n",
+    "y_pred = pipe.predict(X)\n",
     "\n",
     "print(y_pred[:10])\n",
     "print(f'R^2: {pipe.score(X, y):0.4}')"
@@ -1033,10 +1043,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8104d6da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features in the original dataset:13\n",
+      "Number of features in the new dataset: 6\n",
+      "R-square: 0.6931\n"
+     ]
+    }
+   ],
    "source": [
     "# feature union\n",
     "\n",
